Fix: Fixed scrollbar

--- a/src/components/elements/BlogCard/BlogCard.module.css
+++ b/src/components/elements/BlogCard/BlogCard.module.css
@@ -25,10 +25,10 @@
   display: flex;
   flex-direction: column;
   flex: 3;
-  padding: 2rem 2rem 3rem 2rem;
+  padding: 2rem 2rem 2rem 2rem;
   height: 100%;
   background-color: var(--clr-bg-neutral);
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .author {
@@ -37,8 +37,8 @@
   background-color: var(--clr-bg-neutral);
   color: var(--clr-text-primary);
   border-bottom: 2px solid var(--clr-accent-primary);
-  margin-bottom: 2rem;
-  padding-bottom: 2rem;
+  margin-bottom: 1.5rem;
+  padding-bottom: 1.2rem;
 }
 
 .name {
@@ -66,7 +66,7 @@
 .description {
   font-size: 1.1rem;
   color: var(--clr-text-secondary);
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 .list {
