--- a/src/components/layout/BlogSection/BlogSection.module.css
+++ b/src/components/layout/BlogSection/BlogSection.module.css
@@ -1,6 +1,6 @@
 .blogSection {
   background-color: var(--clr-bg-tertiary);
-  padding: 5rem 0;
+  padding: 5rem 0 9rem 0;
   margin-top: 10rem;
 }
 
